# budgeter.rs

./: .gitignore  Cargo.toml  README.md  notes.md  todo.md
migrations/2021-01-30-122911_create_item/: up.sql
src/: budget.rs  cli.rs  duration.rs  interact.rs  item.rs  lib.rs  libr.rs  main.rs  models.rs  schema.rs
